# dataflow-scheduler-mlir-dialects

./: CMakeLists.txt  CODEOWNERS  README.md
cmake/: AddDataflowSchedulerDialects.cmake  AddDataflowSchedulerDialectsPython.cmake  CMakeLists.txt  Config.cmake.in
include/: CMakeLists.txt
include/dataflow-scheduler/Dialect/: CMakeLists.txt  OpTraits.h  OpTraits.td
include/dataflow-scheduler/Dialect/Agen/: Agen.h  Agen.td  AgenEnums.td  CMakeLists.txt  Utils.h
include/dataflow-scheduler/Dialect/Dataflow/: CMakeLists.txt  Dataflow.h  Dataflow.td  DataflowEnums.td  Utils.h
include/dataflow-scheduler/Dialect/KTDF/: CMakeLists.txt  KTDF.h  KTDF.td  KTDFAttributes.h  KTDFAttributes.td  KTDFDialect.h  KTDFDialect.td  KTDFEnums.h  KTDFEnums.td  KTDFTypes.h  KTDFTypes.td
include/dataflow-scheduler/Dialect/KTDFArch/: CMakeLists.txt  KTDFArch.h  KTDFArch.td  KTDFArchAttributes.h  KTDFArchAttributes.td  KTDFArchDialect.h  KTDFArchDialect.td  KTDFArchInterfaces.h  KTDFArchInterfaces.td  KTDFArchIntrinsics.h  KTDFArchIntrinsics.td  KTDFArchTypes.h  KTDFArchTypes.td
include/dataflow-scheduler/Dialect/KTDFArch/Analysis/: DeviceManager.h  Links.h  ResourceIds.h
include/dataflow-scheduler/Dialect/KTDFLowering/: CMakeLists.txt  KTDFLowering.h  KTDFLowering.td  KTDFLoweringDialect.h  KTDFLoweringDialect.td
include/dataflow-scheduler/Dialect/Uniform/: CMakeLists.txt  Uniform.h  Uniform.td
include/dataflow-scheduler/Dialect/VectorChain/: CMakeLists.txt  VectorChain.h  VectorChain.td  VectorChainEnums.td
lib/Dialect/Agen/: Agen.cpp  CMakeLists.txt  Utils.cpp
lib/Dialect/Dataflow/: CMakeLists.txt  Dataflow.cpp  Utils.cpp
lib/Dialect/KTDF/: CMakeLists.txt  KTDFAttributes.cpp  KTDFDialect.cpp  KTDFEnums.cpp  KTDFOps.cpp  KTDFTypes.cpp
lib/Dialect/KTDFArch/: CMakeLists.txt  KTDFArchAttributes.cpp  KTDFArchDialect.cpp  KTDFArchIntrinsics.cpp  KTDFArchOpInterfaces.cpp  KTDFArchOps.cpp  KTDFArchTypes.cpp
lib/Dialect/KTDFArch/Analysis/: CMakeLists.txt  DeviceManager.cpp  Links.cpp  ResourceIds.cpp
lib/Dialect/KTDFLowering/: CMakeLists.txt  KTDFLoweringDialect.cpp  KTDFLoweringOps.cpp
lib/Dialect/Uniform/: CMakeLists.txt  Uniform.cpp
lib/Dialect/VectorChain/: CMakeLists.txt  VectorChain.cpp
python/: CMakeLists.txt  DataflowSchedulerDialectsModule.cpp  requirements.txt
python/mlir_scheduler/: CMakeLists.txt
python/mlir_scheduler/dialects/: AgenOps.td  DataflowOps.td  KTDFArchOps.td  KTDFLoweringOps.td  KTDFOps.td  UniformOps.td  VectorChainOps.td  agen.py  dataflow.py  ktdf.py  ktdf_arch.py  ktdf_lowering.py  uniform.py  vectorchain.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/Agen/: composite_load_and_store.mlir  vector_load.mlir  vector_store.mlir  yield.mlir
test/Dialect/Dataflow/: create_group.mlir  get_logical_memory_view.mlir  get_unit.mlir  program_unit.mlir  receive.mlir  return.mlir  send.mlir  sync_recv.mlir  sync_send.mlir
test/Dialect/KTDF/: applicable-units-attr.mlir  buffer-phase-fold.mlir  buffer-phase-op-invalid.mlir  buffer-phase-op.mlir  create-token-op.mlir  data-transfer-affine-maps-invalid.mlir  data-transfer-affine-maps.mlir  data-transfer-mixed-sizes.mlir  data-transfer-ops.mlir  data-transfer-sizes-rank-mismatch-invalid.mlir  fifo-slot-type.mlir  loop-type-attr.mlir  memory-space-attr.mlir  parallel-op.mlir  pipeline-invalid.mlir  pipeline-modulo-attr-invalid.mlir  pipeline-modulo-attr.mlir  pipeline-stage-ops.mlir  private-ops.mlir  read-from-fifo-op.mlir  select-memref-fold.mlir  select-memref-op-invalid.mlir  select-memref-op.mlir  tile-construct-e2e.mlir  tiling-derive-size-fold.mlir  tiling-derive-size-op-invalid.mlir  tiling-derive-size-op.mlir  tiling-linearize-index-op-invalid.mlir  tiling-linearize-index-op.mlir  tiling-reserve-size-op.mlir  token-type.mlir  unique-op-identity.mlir  write-to-fifo-op.mlir
test/Dialect/KTDFArch/: attributes.mlir  device-invalid.mlir  examples.mlir  features-invalid.mlir  group-invalid.mlir  intrinsics.mlir  properties-invalid.mlir  ring-corelet-example.mlir
test/Dialect/KTDFLowering/: execute_on.mlir  signal.mlir
test/Dialect/Uniform/: def_immutable_mapping.mlir  query_map.mlir  yield.mlir
test/Dialect/VectorChain/: binary.mlir  shuffle.mlir
test/Inputs/: device-absolute.mlir  device-invalid.mlir  device-manager-test.mlir  device.mlir  links.mlir  resource-ids.mlir  resource.mlir
test/dataflow-scheduler-dialects-opt/: dialects.mlir
test/python/: import.py  lit.local.cfg
tools/: CMakeLists.txt
tools/dataflow-scheduler-dialects-lsp-server/: CMakeLists.txt  dataflow-scheduler-dialects-lsp-server.cpp
tools/dataflow-scheduler-dialects-opt/: CMakeLists.txt  dataflow-scheduler-dialects-opt.cpp
unittest/: CMakeLists.txt  Utils.h  main.cpp
unittest/Dialect/KTDFArch/: AdjacencyMatrixAttr.cpp  Features.cpp  Resource.cpp
unittest/Dialect/KTDFArch/Analysis/: DeviceManager.cpp  Links.cpp  ResourceIds.cpp
